Smoke in some cases doesn't update animation state in Cycles after first render. #40195

Closed
opened 2014-05-14 17:10:13 +02:00 by Kai Kostack · 10 comments

System Information
Windows 7 x64

Blender Version
Broken: All

Short description of error
When working in scenes with smoke sometimes the scene turns into a state that make Cycles unable to render any animated smoke anymore. This is a strange problem since even newly created domains doesn't update after the first render. In viewport everything looks fine and even with BI it renders correctly. The only way to fix it is to create a completely new .blend file and append everything from the corrupted file.

Exact steps for others to reproduce the error
This is the second time it happens to me and even though I cannot reproduce it's cause, I at least can provide a damaged scene. This file has a fresh smoke domain with some baked data but it's not updating in Cycles, just render an animation and see.

bug_smoke-in-cycles.blend

**System Information** Windows 7 x64 **Blender Version** Broken: All **Short description of error** When working in scenes with smoke sometimes the scene turns into a state that make Cycles unable to render any animated smoke anymore. This is a strange problem since even newly created domains doesn't update after the first render. In viewport everything looks fine and even with BI it renders correctly. The only way to fix it is to create a completely new .blend file and append everything from the corrupted file. **Exact steps for others to reproduce the error** This is the second time it happens to me and even though I cannot reproduce it's cause, I at least can provide a damaged scene. This file has a fresh smoke domain with some baked data but it's not updating in Cycles, just render an animation and see. [bug_smoke-in-cycles.blend](https://archive.blender.org/developer/F88937/bug_smoke-in-cycles.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KaiKostack-3

Added subscriber: @KaiKostack-3
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I noticed this in the very first cycles smoke builds already, but reporting at that stage didn't seem necessary.

IIRC it is possible to reset the smoke representation in cycles somehow, but it's very cumbersome and i can't remember what works exactly. It's certainly a cycles issue (like you said, actual data in viewport is fine), i guess the database tagging doesn't work nicely in those cases. It might be a depsgraph issue, as usual ...

I noticed this in the very first cycles smoke builds already, but reporting at that stage didn't seem necessary. IIRC it is possible to reset the smoke representation in cycles somehow, but it's very cumbersome and i can't remember what works exactly. It's certainly a cycles issue (like you said, actual data in viewport is fine), i guess the database tagging doesn't work nicely in those cases. It might be a depsgraph issue, as usual ...
Brecht Van Lommel was assigned by Lukas Tönne 2014-05-14 17:45:22 +02:00
Author

I found the cause, it's the "persistent images" option which prevents not only images to be reloaded on frame change but also smoke data. Disabling this instantly fixed the problem.

I found the cause, it's the "persistent images" option which prevents not only images to be reloaded on frame change but also smoke data. Disabling this instantly fixed the problem.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

We use 3D Textures for Smoke data, so that seems indeed like a bug.

We use 3D Textures for Smoke data, so that seems indeed like a bug.

This issue was referenced by c6d9b11b70

This issue was referenced by c6d9b11b70d33ff31f505abc2277880710ce85dc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c6d9b11b70.

Closed by commit c6d9b11b70.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40195
No description provided.