Fix T40195: cycles smoke + persistent images animation render not working correct.